--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
   
   <br>
-  
+  <div class="title">
+    <h1>Fighting Game</h1>
+  </div>
   <div class="menu">
     <div class="p1Info">
 
